@startuml p10-tugas-accountnotfound
scale 2
!include _common.iuml
hide circle
hide empty members
left to right direction

class Exception {
}

class AccountNotFoundException {
}

class Bank {
  + findAccount(accountNumber : String) : Account
}

Exception <|-- AccountNotFoundException
Bank ..> AccountNotFoundException : throws
@enduml
